infra/k8s/nats-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: nats-depl
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      app: nats
  template: 
    metadata: 
      labels: 
        app: nats
    spec: 
      container:
        - name: nats
          image: nats-streaming:0.17.0
          # commands to execute when container starts up
          # refer to https://hub.docker.com/_/nats-streaming
          # 1st arg is a command, 2nd is an option to this command
          args: [
            '-p',
            '4222',
            '-m',
            '8222',
            '-hbi',
            '5s',
            '-hbt',
            '5s',
            '-hbf',
            '2',
            '-SD',
            '-cid',
            'ticketing'
          ]
---
apiVersion: v1
kind: Service
metadata: 
  name: nats-srv
spec: 
  # direct traffic to the pod with label nats
  selector: 
    app: nats
  type: ClusterIP
  ports: 
    - name: client
      protocol: TCP
      port: 4222
      targetPort: 4222 
    - name: monitoring
      protocol: TCP
      port: 8222
      targetPort: 8222
