infra/k8s/tickets-depl.yaml
apiVersion: apps/v1
kind: Deployment
# name of deployment object
metadata:
  name: tickets-depl
  # how deployment should behave
spec: 
  # number of pods to create
  replicas: 1
  selector:
    # take a look at pods with current names "auth"
    matchLabels:
      app: tickets
  # configuration applied to pod
  template:
    metadata:
    # pod should have label of "tickets"
      labels:
        app: tickets
    # the exact attributes we want to apply to the object we are about to create
    spec:
    # pod should have a container with name of "tickets"
      containers:
        # name is only important for logging purposes/make a container with a name 'auth'
        - name: tickets
          image: us.gcr.io/ticketing-300820/tickets
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-srv 
spec: 
  selector:
  # direct traffic to the pod with label nats
    app: tickets
  type: ClusterIP
  ports:
  # name is not important just for logging purposes
    - name: tickets
      protocol: TCP
      port: 3000
      targetPort: 3000
